# DeCAP_correction_tool

./: .gitignore  README.md  convert_to_toml.py  pyproject.toml
app/: main.py
app/utils/: gdrive.py  sqlite_script.py  utils.py
data/: giftcode_system.dbZone.Identifier
notebooks/: explore.ipynb
notebooks/.gradio/flagged/: dataset1.csv
