[project]
name = "decap_correction_tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.176.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "gradio>=5.36.2",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.46.1",
]
